// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NamespaceAdd Dialog Renders the component 1`] = `
<fragment-stub>
  <!---->
  <div class="v-list-item__title">
    <div class="v-dialog__container"></div>
  </div>
</fragment-stub>
`;

exports[`NamespaceAdd Doesn't render the dialog Renders the component 1`] = `
<fragment-stub>
  <!---->
  <div class="v-list-item__title">
    <div class="v-dialog__container">
      <!---->
    </div>
  </div>
</fragment-stub>
`;
